hphp/hack/test/typecheck/shapes_cc_3.php.exp
File "shapes_cc_3.php", line 20, characters 3-10:
Shape uses literal string as field name (Typing[4050])
  File "shapes_cc_3.php", line 19, characters 3-7:
  But expected a class constant. Shape fields cannot be a mix of literals and constants.
